<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@color/main_grey"
             android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/confirm_dialog_frame"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textColor="@color/error_red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/destination"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/selected_item"
            android:enabled="false"
            android:textColor="@color/black"
            android:inputType="text"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/bookmark_label"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/bookmark_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/selected_item"
            android:textColor="@color/black"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok"
                style="@style/dialog_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_ok"/>

            <Button
                android:id="@+id/cancel"
                style="@style/dialog_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_cancel"/>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/current_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/main_grey"
        android:ellipsize="middle"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/dialog_actions"
        android:textColor="@color/white"
        android:textSize="16dp"/>

</FrameLayout>