<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:background="@color/main_grey"
             android:padding="5dp"
             android:layout_height="fill_parent">

    <ScrollView
            android:id="@+id/auth_form"
            android:layout_marginTop="10dp"
            android:paddingTop="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:background="@drawable/confirm_dialog_frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@id/error"
                    android:visibility="gone"
                    android:textColor="@color/error_red"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/domain_label"
                    android:text="@string/domain"
                    android:textColor="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/smb_domain"
                        android:background="@color/selected_item"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                <ImageView
                        android:id="@+id/smb_scan_network"
                        android:src="@drawable/search"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/smb_username"
                    android:background="@color/selected_item"
                    android:textColor="@color/black"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:text="@string/archive_password"
                    android:textColor="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <EditText
                    android:id="@+id/smb_password"
                    android:background="@color/selected_item"
                    android:textColor="@color/black"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/ok"
                        android:text="@string/btn_ok"
                        style="@style/dialog_button"
                        android:layout_weight="0.5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

                <Button
                        android:id="@+id/cancel"
                        android:text="@string/btn_cancel"
                        style="@style/dialog_button"
                        android:layout_weight="0.5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:id="@+id/progress_form"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:paddingTop="40dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/confirm_dialog_frame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/connecting_to_smb"
                android:layout_marginLeft="20dp"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
            android:id="@+id/current_action"
            android:text="@string/smb_server"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:ellipsize="middle"
            android:background="@color/main_grey"
            android:layout_gravity="center_horizontal"/>

</FrameLayout>